2007-12-18  Jim Meyering  <meyering@redhat.com>

	* lib/gnupload (GPG): Don't use an absolute path.
	This reverts part of the 2004-01-28 change.

2007-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/Automake/FileUtils.pm (open_quote): New function.
	(update_file, contents): Use it.

	Reword the copyright notices to match what's suggested in GPLv3.

2007-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/defs.in: Quote $srcdir, $PATH; skip libtool and gettext
	tests if the absolute source or build tree name contain whitespace.

	Modify some tests for absolute trees containing whitespace.
	* tests/missing.test: Use "./missing" instead of "`pwd`/missing".
	* tests/missing2.test: Likewise.
	* tests/mmodely.test: Add `pwd` to $PATH instead of absolute
	references to myyacc.sh and mylex.sh.
	* tests/multlib.test: Likewise for mycc.
	* tests/txinfo26.test: Skip if `pwd` contains whitespace, as
	an absolute --srcdir does not work there.

	* INSTALL, lib/INSTALL, lib/config-ml.in, lib/config.guess,
	lib/config.sub, lib/texinfo.tex: Sync from upstream.

	Fix the distdir target to cope with spaces in absolute file names.
	* lib/am/distdir.am: Quote all instances of $(distdir) and
	$(top_distdir).  They could contain white space, coming from
	a toplevel package bootstrapped with an older Automake version.
	(am__relativize): New macro, taken from gnulib code, written by
	Bruno Haible.
	(distdir): Use it to compute relative paths to distdir and
	top_distdir for enclosed subpackages.
	Also, quote $(distuninstallcheck_dir).
	* lib/am/texinfos.am: Likewise, quote $(distdir).

2007-11-26  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Quote file names in tests that can be absolute.
	* tests/auxdir.test, tests/check3.test, tests/check4.test,
	tests/compile.test, tests/cond33.test, tests/condhook.test,
	tests/distdir.test, tests/dollar.test, tests/empty.test,
	tests/gnits2.test, tests/gnits3.test, tests/include2.test,