@@ -1,3 +1,10 @@
+2008-01-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Bump copyright years.
+	* aclocal.in (write_aclocal, version): Likewise.
+	* automake.in ($gen_copyright, version): Likewise.
+	* doc/automake.texi: Likewise.
+
 2007-12-18  Jim Meyering  <meyering@redhat.com>
 
 	* lib/gnupload (GPG): Don't use an absolute path.
@@ -2338,7 +2345,7 @@
 
 -----
 
-Copyright (C) 2005, 2006, 2007  Free Software Foundation, Inc.
+Copyright (C) 2005, 2006, 2007, 2008  Free Software Foundation, Inc.
 
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
